# everything-cli-anything

./: HARNESS.md  README.md  pyproject.toml  setup.py
cli_anything/everything/: __init__.py  __main__.py  everything_cli.py
cli_anything/everything/core/: __init__.py  backend.py
cli_anything/everything/skills/: SKILL.md
cli_anything/everything/tests/: test_backend.py
cli_anything/everything/utils/: __init__.py  output.py
